added logo's, made setup for navbar and edited style for navbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,16 @@
 
     --light-background: #EFEFF1;
     --dark-background: #1C1C1C;
+    --white: #FFFFFF;
+}
+
+nav {
+    width: 100%;
+    height: 10vh;
+    background-color: var(--white);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .container {
