--- a/css/styles_faq.css
+++ b/css/styles_faq.css
@@ -15,31 +15,90 @@
     --dark-background: #1C1C1C;
 }
 
-.faq-outer-grid {
+/*.faq-outer-grid {
+    margin-top: 1rem;
+}*/
+
+#faq-inner-grid {
     display: grid;
     width: 50rem;
     grid-template-rows: repeat(6 , 1fr);
     grid-template-columns: 1fr 10%;
 }
 
-.faq-outer-flex {
+#faq-outer-flex {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
-.faq-inner-flex {
+#faq-inner-flex {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-/*a {
+#faq-leesmeer {
     display: flex;
-    align-items: flex-end;
-    flex-wrap: wrap;
-}*/
+    width: 50rem;
+    justify-content: flex-end;
+}
 
+.faq-popup-box-1 {
+    grid-row: 1 / 2;
+    background-color: var(--light-blue);
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+.faq-popup-box-2 {
+    grid-row: 3 / 4;
+    background-color: var(--light-blue);
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+.faq-popup-box-3 {
+    grid-row: 5 / 6;
+    background-color: var(--light-blue);
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+
+.faq-popup-arrow-1 {
+    grid-row: 1 / 2;
+    grid-column: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--light-blue);
+}
+
+.faq-popup-arrow-2 {
+    grid-row: 3 / 4;
+    grid-column: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--light-blue);
+}
+
+.faq-popup-arrow-3 {
+    grid-row: 5 / 6;
+    grid-column: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--light-blue);
+}
+
+.faq-popup-spacer {
+    grid-row: 6;
+    margin: calc(88px / 2);
+}
