--- a/css/styles.css
+++ b/css/styles.css
@@ -13,13 +13,14 @@
 
     --light-background: #EFEFF1;
     --dark-background: #1C1C1C;
+
+    --text-color: #3C3C43;
 }
 
 .container {
     /* Dit zijn de basis wit ruimtes van de pagina. */
     display: flex;
-    padding-left: 10rem; 
-    padding-right: 10rem; 
+    padding: 0 20rem;
     flex-direction: column;
 }
 
@@ -36,4 +37,145 @@
 @font-face {
     font-family: Calibre-Bold;
     src: url(/fonts/Calibre-Bold.otf);
+}
+
+body {
+    background-color: var(--light-background);
+}
+
+.values_title {
+    color: var(--dark-blue);
+    text-align: center;
+}
+
+.values_title h1{
+    font-family: Calibre-Bold;
+    font-size: 1.5rem;
+}
+
+.values_title h2 {
+    font-family: Calibre-Medium;
+    font-size: 2rem;
+}
+
+.values_big_boxes {
+    display: flex;
+    justify-content: center;
+    margin-top: 3rem;
+}
+
+.values_big_box {
+    width: 100%;
+    height: 30rem;
+    background-color: white;
+    box-shadow: 0 1.5px 9px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+
+.values_big_box img {
+    height: 200px;
+}
+
+.values_big_box h2 {
+    color: var(--dark-blue);
+    font-family: Calibre-Bold;
+    padding-bottom: 0.5rem;
+    font-size: 1.7rem;
+    margin-top: 4rem;
+}
+
+.values_big_box p {
+    color: var(--text-color);
+    font-family: Calibre-Regular;
+    font-size: 1.2rem;
+    width: 350px;
+}
+
+.big_middle {
+    margin: 0 15px;
+}
+
+.small_middle {
+    margin: 0 38px;
+}
+
+.values_small_boxes {
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+}
+
+.values_small_box {
+    width: 360px;
+    height: 110px;
+    background-color: white;
+    box-shadow: 0 1.5px 9px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 20px;
+    position: relative;
+}
+
+.icon1 {
+    /* happy */
+
+position: absolute;
+width: 41px;
+height: 41px;
+left: 14px;
+top: 29px;
+
+border-radius: 18px;
+
+
+/* Ellipse 87 */
+
+position: absolute;
+left: 12.5%;
+right: 12.5%;
+top: 12.5%;
+bottom: 12.5%;
+
+border: 3px solid #799DAB;
+
+
+/* Ellipse 90 */
+
+position: absolute;
+left: 40%;
+right: 43.33%;
+top: 50%;
+bottom: 33.33%;
+
+border: 2px solid #799DAB;
+
+
+/* Rectangle 3973 */
+
+position: absolute;
+left: 29.17%;
+right: 58.33%;
+top: 33.33%;
+bottom: 58.33%;
+
+background: #799DAB;
+border: 0.25px solid #799DAB;
+border-radius: 27px;
+
+
+/* Rectangle 3974 */
+
+position: absolute;
+left: 58.33%;
+right: 29.17%;
+top: 33.33%;
+bottom: 58.33%;
+
+background: #799DAB;
+border: 0.25px solid #799DAB;
+border-radius: 27px;
+
 }
