--- a/css/styles.css
+++ b/css/styles.css
@@ -10,10 +10,13 @@
     --dark-blue: #799dab;
     --normal-blue: #c7eaf8;
     --light-blue: #dcf1f9;
-
     --light-background: #EFEFF1;
     --dark-background: #1C1C1C;
     --white: #FFFFFF;
+}
+
+a:visited {
+    color: var(--dark-blue);
 }
 
 nav {
@@ -21,8 +24,30 @@ nav {
     height: 10vh;
     background-color: var(--white);
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: Calibre-Bold;
+    font-size: 18px;
+    color: var(--dark-blue);
+}
+
+nav ul {
+    display: flex;
     justify-content: space-around;
     align-items: center;
+    padding-right: 10rem;
+}
+
+nav ul li {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-right: 1rem;
+    margin-left: 1rem;
+}
+
+nav img {
+    padding-left: 10rem;
 }
 
 body {
