--- a/css/styles_faq.css
+++ b/css/styles_faq.css
@@ -31,17 +31,6 @@ a:visited {
     color: var(--dark-blue);
 }
 
-/*.faq-outer-grid {
-    margin-top: 1rem;
-}*/
-
-#faq-inner-grid {
-    display: grid;
-    width: 50rem;
-    grid-template-rows: repeat(6 , 1fr);
-    grid-template-columns: 1fr 10%;
-    color: black;
-}
 
 #faq-outer-flex {
     display: flex;
@@ -53,89 +42,29 @@ a:visited {
 
 #faq-inner-flex {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.faq-popup-box-flex {
+    display: flex;
+    width: 770px;
+    height: 88px;
+    justify-content: space-between;
+    align-items: flex-end;
+    background-color: var(--light-blue);
+    padding: 2rem;
+    box-shadow: 0 1.5px 9px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
 }
 
 #faq-leesmeer {
     display: flex;
-    width: 50rem;
+    width: 770px;
     justify-content: flex-end;
     font-size: large;
     margin-bottom: 1rem;
-}
-
-.faq-popup-box-1 {
-    grid-row: 1 / 2;
-    background-color: var(--light-blue);
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    border-bottom-left-radius: 15px;
-    border-top-left-radius: 15px;
-    padding: 2rem;
-}
-
-.faq-popup-box-2 {
-    grid-row: 3 / 4;
-    background-color: var(--light-blue);
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    border-bottom-left-radius: 15px;
-    border-top-left-radius: 15px;
-    padding: 2rem;
-}
-
-.faq-popup-box-3 {
-    grid-row: 5 / 6;
-    background-color: var(--light-blue);
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    border-bottom-left-radius: 15px;
-    border-top-left-radius: 15px;
-    padding: 2rem;
-}
-
-
-.faq-popup-arrow-1 {
-    grid-row: 1 / 2;
-    grid-column: 2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--light-blue);
-    border-bottom-right-radius: 15px;
-    border-top-right-radius: 15px;
-    font-size: 3rem;
-}
-
-.faq-popup-arrow-2 {
-    grid-row: 3 / 4;
-    grid-column: 2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--light-blue);
-    border-bottom-right-radius: 15px;
-    border-top-right-radius: 15px;
-    font-size: 3rem;
-}
-
-.faq-popup-arrow-3 {
-    grid-row: 5 / 6;
-    grid-column: 2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--light-blue);
-    border-bottom-right-radius: 15px;
-    border-top-right-radius: 15px;
-    font-size: 3rem;
-}
-
-.faq-popup-spacer {
-    grid-row: 6;
-    margin: calc(88px / 2);
 }
