--- a/css/footer.css
+++ b/css/footer.css
@@ -6,7 +6,7 @@
     color: black;
     width: 100%;
     height: 10rem;
-    padding: 2rem 0rem;
+    padding: 3rem 5rem;
 }
 
 #row1{
@@ -14,23 +14,19 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding-left: 5rem; 
-    padding-right: 5rem; 
     padding-bottom: 2rem;
 }
 
 #row2{
-
     width: 100%;
     height: 2rem;
-    padding-left: 10rem; 
-    padding-right: 10rem; 
 }
 
 #copyright{
     padding-top: 2rem;
-    border-top: 1px rgb(230,230,230) solid;
     text-align: center;
+    color: #A6A7AB;
+    font-size: 0.75rem;
 }
 
 #subscribe{
@@ -39,11 +35,17 @@
     justify-content: space-between;
 }
 
+#subscribe_container{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
 #subscribe_email1{
     width: max-content;
 }
 
-#subscribe_email{
+#subscribe_email{    
     border-radius: 0.5rem;
     padding: 0.4rem 0.8rem;
 }
@@ -54,4 +56,15 @@
     color: white;
     border-radius: 0.5rem;
     padding: 0.4rem 0.8rem;
+}
+
+#footer_logo{
+    width: 7.03125rem;
+    height: 2,390625;
+}
+
+#socials{
+    display: flex;
+    gap: 1rem;
+    margin-top: 1rem;
 }
