--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+@import url(values.css);
+
 * {
     margin: 0;
     padding: 0;
@@ -41,107 +43,4 @@
 
 body {
     background-color: var(--light-background);
-}
-
-.values_title {
-    color: var(--dark-blue);
-    text-align: center;
-}
-
-.values_title h1 {
-    font-family: Calibre-Bold;
-    font-size: 1.5rem;
-}
-
-.values_title h2 {
-    font-family: Calibre-Medium;
-    font-size: 2rem;
-}
-
-.values_big_boxes {
-    display: flex;
-    justify-content: center;
-    margin-top: 3rem;
-}
-
-.values_big_box {
-    width: 100%;
-    height: 30rem;
-    background-color: white;
-    box-shadow: 0 1.5px 9px 0 rgba(0, 0, 0, 0.2);
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-}
-
-.values_big_box img {
-    height: 200px;
-}
-
-.values_big_box h2 {
-    color: var(--dark-blue);
-    font-family: Calibre-Bold;
-    padding-bottom: 0.5rem;
-    font-size: 1.7rem;
-    margin-top: 4rem;
-}
-
-.values_big_box p {
-    color: var(--text-color);
-    font-family: Calibre-Regular;
-    font-size: 1.2rem;
-    width: 350px;
-}
-
-.big_middle {
-    margin: 0 15px;
-}
-
-.small_middle {
-    margin: 0 38px;
-}
-
-.values_small_boxes {
-    display: flex;
-    justify-content: center;
-    margin-top: 2rem;
-}
-
-.values_small_box {
-    width: 360px;
-    height: 110px;
-    background-color: white;
-    box-shadow: 0 1.5px 9px 0 rgba(0, 0, 0, 0.2);
-    border-radius: 20px;
-    display: flex;
-    align-items: center;
-}
-
-.icon {
-    padding-left: 1rem;
-}
-
-.icon img {
-    height: 3rem;
-}
-
-.values_small_box_text {
-    padding-left: 1rem;
-    padding-top: 0.6rem;
-    line-height: 24px;
-}
-
-.values_small_box_text h1 {
-    font-family: Calibre-Bold;
-    color: var(--dark-blue);
-    font-size: 2rem;
-}
-
-.values_small_box_text p {
-    font-family: Calibre-Regular;
-    color: var(--text-color);
-    font-size: 1.3rem;
 }
