--- a/css/styles_faq.css
+++ b/css/styles_faq.css
@@ -32,7 +32,7 @@ a:visited {
 }
 
 
-#faq-outer-flex {
+#faq-outer-flex { /*Flexbox used for configuring the main FAQ page*/
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -40,7 +40,7 @@ a:visited {
     justify-content: space-between;
 }
 
-#faq-inner-flex {
+#faq-inner-flex { /*Flexbox used for configuring the dropdown popup boxes*/
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -49,7 +49,15 @@ a:visited {
     gap: 30px;
 }
 
-.faq-popup-box-flex {
+#faq-leesmeer { /*Flexbox used for aligning the "Lees Meer" button*/
+    display: flex;
+    width: 770px;
+    justify-content: flex-end;
+    font-size: large;
+    margin-bottom: 1rem;
+}
+
+.faq-popup-box-flex { /*Flexbox used for the dropdown popup boxes*/
     display: flex;
     width: 770px;
     height: 88px;
@@ -64,7 +72,7 @@ a:visited {
     border-radius: 8px;
 }
 
-.faq-popup-box-collapsible {
+.faq-popup-box-collapsible { /*Box used for the dropdown popup boxes arrows*/
     border: 0px;
     height: 88px;
     width: 88px;
@@ -74,15 +82,6 @@ a:visited {
     cursor: pointer;
 }
 
-.faq-popup-box-collapsible-content {
+.faq-popup-box-collapsible-content { /*Box used for the dropdown popup boxes dropdowns*/
     overflow: hidden;
-    
-}
-
-#faq-leesmeer {
-    display: flex;
-    width: 770px;
-    justify-content: flex-end;
-    font-size: large;
-    margin-bottom: 1rem;
 }
