--- a/css/styles_faq.css
+++ b/css/styles_faq.css
@@ -35,10 +35,12 @@
 
 h1 {
     color: var(--dark-blue);
+    font-size: 24px;
 }
 
 h2 {
     color: var(--dark-blue);
+    font-size: 32px;
 }
 
 a {
