--- a/css/reviews.css
+++ b/css/reviews.css
@@ -2,7 +2,7 @@
 /* default styling elements */
 /*  */
 #reviews {
-    background-color: #EFEFF1;
+    background-color: var(--light-background);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -27,12 +27,12 @@
 .title_margin h4 {
     font-weight: bolder;
     padding-bottom: .2rem;
-    color: #799DAB;
+    color: var(--dark-blue);
     font-family: Calibre, sans-serif;
 }
 .title_margin h2 {
     font-weight: normal;
-    color: #799DAB;
+    color: var(--dark-blue);
     font-family: Calibre, sans-serif;
 }
 /*  */
@@ -55,7 +55,7 @@
     box-sizing: border-box;
     margin: 1rem;
     border-radius: 18px;
-    background-color: #fff;
+    background-color: var(--white);
     box-shadow: 0px 1.5px 9px rgba(0, 0, 0, 0.20);
 }
 /* contents of the slide */
@@ -72,6 +72,7 @@
     padding-bottom: 1rem;
 }
 .carousel_content h3 {
+    color: var(--text-color);
     padding-bottom: .2rem;
 }
 .carousel_content h5 {
@@ -80,12 +81,13 @@
 }
 .carousel_content p {
     padding-top: .4rem;
+    color: var(--text-color);
 }
 /* navigation arrows */
 .carousel_arrow {
     font-size: 24px;
     cursor: pointer;
-    background-color: #C7EAF8;
+    background-color: var(--normal-blue);
     border-radius: 50%;
     padding: 1rem;
 }
@@ -116,7 +118,8 @@
 }
 /* changes color for the active dot */
 .active_dot {
-    background-color: #333;
+    background-color: #00000080;
+    border: 0px;
 }
 
 
