--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 @import url(about-us.css);
 @import url(values.css);
 @import url(services.css);
-@import url(faq.css);
+@import url(styles_faq.css);
 @import url(reviews.css);
 @import url(contact.css);
 @import url(footer.css);
