faq id converted to class so it kan use one id for navigation scroll | Added same styling in main for all titles

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,3 +56,14 @@ body {
     flex-direction: column;
 }
 
+.title_section {
+    font-weight: bolder;
+    padding-bottom: .2rem;
+    color: var(--dark-blue);
+    font-family: Calibre, sans-serif;
+}
+.sub_title_section {
+    font-weight: normal;
+    color: var(--dark-blue);
+    font-family: Calibre, sans-serif;
+}
