--- a/css/styles_faq.css
+++ b/css/styles_faq.css
@@ -1,4 +1,4 @@
-#faq-outer-flex { /*Flexbox used for configuring the main FAQ page*/
+.faq-outer-flex { /*Flexbox used for configuring the main FAQ page*/
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -6,7 +6,7 @@
     justify-content: space-between;
 }
 
-#faq-inner-flex { /*Flexbox used for configuring the dropdown popup boxes*/
+.faq-inner-flex { /*Flexbox used for configuring the dropdown popup boxes*/
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -15,7 +15,7 @@
     gap: 1.25rem;
 }
 
-#faq-leesmeer { /*Flexbox used for aligning the "Lees Meer" button*/
+.faq-leesmeer { /*Flexbox used for aligning the "Lees Meer" button*/
     display: flex;
     width: 32rem;
     justify-content: flex-end;
