--- a/css/styles_faq.css
+++ b/css/styles_faq.css
@@ -51,7 +51,7 @@ a:visited {
     color: var(--dark-blue);
 }
 
-#faq-outer-flex { /*Flexbox used for configuring the main FAQ page*/
+.faq-outer-flex { /*Flexbox used for configuring the main FAQ page*/
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -59,7 +59,7 @@ a:visited {
     justify-content: space-between;
 }
 
-#faq-inner-flex { /*Flexbox used for configuring the dropdown popup boxes*/
+.faq-inner-flex { /*Flexbox used for configuring the dropdown popup boxes*/
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -68,7 +68,7 @@ a:visited {
     gap: 1.25rem;
 }
 
-#faq-leesmeer { /*Flexbox used for aligning the "Lees Meer" button*/
+.faq-leesmeer { /*Flexbox used for aligning the "Lees Meer" button*/
     display: flex;
     width: 32rem;
     justify-content: flex-end;
