FAQ-page: added all the text for the popup boxes

--- a/css/styles_faq.css
+++ b/css/styles_faq.css
@@ -51,6 +51,10 @@ a:visited {
     color: var(--dark-blue);
 }
 
+.faq-page-breakline {
+    height: 2rem;
+}
+
 .faq-outer-flex { /*Flexbox used for configuring the main FAQ page*/
     display: flex;
     flex-direction: column;
