--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+@import "navbar.css";
+@import "header.css";
+
 * {
     margin: 0;
     padding: 0;
@@ -15,43 +18,38 @@
     --white: #FFFFFF;
 }
 
-a:visited {
-    color: var(--dark-blue);
-}
-
-nav {
-    width: 100%;
-    height: 10vh;
-    background-color: var(--white);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-family: Calibre-Bold;
-    font-size: 18px;
-    color: var(--dark-blue);
-}
-
-nav ul {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding-right: 10rem;
-}
-
-nav ul li {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-right: 1rem;
-    margin-left: 1rem;
-}
-
-nav img {
-    padding-left: 10rem;
-}
-
 body {
+    /* Dit geeft de achtergrond van de pagina */
     background-color: var(--light-background);
+}
+
+a:visited {
+    /* Dit zorgt ervoor dat alle linkjes dezelfde kleur hebben als ze zijn gebruikt */
+    color: var(--dark-blue);
+}
+
+header {
+    height: 100vh;
+    width: 100vw;
+    background-image: url("../img/headerbackgroundcircles.svg"), linear-gradient(var(--dark-blue), var(--light-background));
+    background-size: cover;
+}
+
+#headerimg {
+    width: 15rem;
+}
+
+#headerbackground {
+    width: 100%;
+    position: absolute;
+}
+
+#banner {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 100vh;
 }
 
 .container {
@@ -59,6 +57,24 @@ body {
     display: flex;
     padding: 0 20rem;
     flex-direction: column;
+}
+
+
+h1 {
+    font-family: Calibre-Bold;
+    font-size: 36px;
+    color: var(--dark-blue);
+}
+h2 {
+    font-family: Calibre-Medium;
+    font-size: 24px;
+    color: var(--dark-blue);
+}
+
+h3 {
+    font-family: Calibre-Regular;
+    font-size: 18px;
+    color: var(--dark-blue);
 }
 
 @font-face {
