changed the size of the header in the values section. and added (a few) comments to my css. als removed some un-needed css

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@
     box-sizing: border-box;
     font-family: Calibre-Bold, sans-serif;
     text-transform: lowercase;
+    scroll-behavior: smooth;
 }
 
 :root {
