Added the faq page and linked it with the button on the faq section in the main | Filled in all the text for the faq | Converted the faq page to snakecase | js of faq now in a seperate file

--- a/css/styles_faq.css
+++ b/css/styles_faq.css
@@ -77,3 +77,12 @@
     align-items: center;
     padding-left: 1.25rem;
 }
+
+.faq_page_breakline {
+    height: 2rem;
+}
+
+.faq_container {
+    margin-top: 6rem;
+    margin-bottom: 6rem;
+}
