--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@
     --light-background: #EFEFF1;
     --dark-background: #1C1C1C;
     --white: #FFFFFF;
+    --logo-filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(1%) hue-rotate(123deg) brightness(105%) contrast(101%);
 }
 
 body {
@@ -24,34 +25,10 @@ body {
     background-color: var(--light-background);
 }
 
-a:visited {
-    /* Dit zorgt ervoor dat alle linkjes dezelfde kleur hebben als ze zijn gebruikt */
+/* a:visited {
+    /* Dit zorgt ervoor dat alle linkjes dezelfde kleur hebben als ze zijn gebruikt
     color: var(--dark-blue);
-}
-
-header {
-    height: 100vh;
-    width: 100vw;
-    background-image: url("../img/headerbackgroundcircles.svg"), linear-gradient(var(--dark-blue), var(--light-background));
-    background-size: cover;
-}
-
-#headerimg {
-    width: 15rem;
-}
-
-#headerbackground {
-    width: 100%;
-    position: absolute;
-}
-
-#banner {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 100vh;
-}
+} */
 
 .container {
     /* Dit zijn de basis wit ruimtes van de pagina. */
