--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,7 @@
     --dark-background: #1C1C1C;
     --text-color: #3C3C43;
     --white: #FFFFFF;
+    --logo-filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(1%) hue-rotate(123deg) brightness(105%) contrast(101%);
 }
 
 body {
@@ -55,6 +56,23 @@ body {
     display: flex;
     padding: 0 20rem;
     flex-direction: column;
+}
+
+h1 {
+    font-family: Calibre-Bold;
+    font-size: 36px;
+    color: var(--dark-blue);
+}
+h2 {
+    font-family: Calibre-Medium;
+    font-size: 24px;
+    color: var(--dark-blue);
+}
+
+h3 {
+    font-family: Calibre-Regular;
+    font-size: 18px;
+    color: var(--dark-blue);
 }
 
 .title_section {
