--- a/css/styles.css
+++ b/css/styles.css
@@ -76,12 +76,14 @@ h3 {
 }
 
 .title_section {
+    font-size: 1.8rem; 
     font-weight: bolder;
     padding-bottom: .2rem;
     color: var(--dark-blue);
     font-family: Calibre-Bold, sans-serif;
 }
 .sub_title_section {
+    font-size: 2.8rem;
     font-weight: normal;
     color: var(--dark-blue);
     font-family: Calibre-Regular, sans-serif;
