--- a/css/contact.css
+++ b/css/contact.css
@@ -1,6 +1,6 @@
 @import url(styles.css);
 
-@media (max-width: 1260px) {
+@media (max-width: 1280px) {
     .contact-left {
         display: none !important
     }
@@ -35,8 +35,8 @@
 
 .contact-right {
     flex: 1;
-    display: flex; /* Make it a flex container */
-    flex-direction: column; /* Arrange child elements vertically */
+    display: flex; 
+    flex-direction: column; 
     background-color: #EFEFF1;
     border-radius: 14.4px;
     padding: 30px;
@@ -89,18 +89,30 @@ background: #799DAB;
 color: white;
 width: 280px;
 height: 40px;
-padding-top: 10px; 
+padding: 10px; 
 margin-bottom: 10px;
+display: flex; /* Use flexbox for layout */
+align-items: center; /* Center vertically within the container */
+}
+
+.blue-box i {
+    display: inline; 
+    margin: 0; 
+    padding-right: 5px;
+}
+.blue-box p {
+    display: inline; 
+    margin: 0; 
 }
 
 
 .input-contact{
-    border: none; /* Remove border */
-    outline: none; /* Remove outline */
-    background-color: transparent; /* Make background transparent */
-    border-bottom: 1px solid #000; /* Add a bottom border */
-    padding: 5px; /* Add some padding */
-    width: 100%; /* Make it full width */
+    border: none; 
+    outline: none; 
+    background-color: transparent; 
+    border-bottom: 1px solid #000; 
+    padding: 5px; 
+    width: 100%; 
 }
 
 .submit-button-contactform {
@@ -119,5 +131,9 @@ margin-bottom: 10px;
 
 .social-media-icons-left i {
     margin-left: 20px; 
+}
+
+.contact-left h2 {
+    color: black;
 }
 
