--- a/css/contact.css
+++ b/css/contact.css
@@ -1,5 +1,7 @@
 @import url(styles.css);
 
+    /* Als de pagina kleiner wordt dan 1280px dan verdwijnt de linkerzijde */
+
 @media (max-width: 1280px) {
     .contact-left {
         display: none !important
@@ -117,8 +119,8 @@ align-items: center; /* Center vertically within the container */
 
 .submit-button-contactform {
     background-color: #799DAB;
-    border-radius: 9.6px;
-    padding: 14.4px 38.4px;
+    border-radius: 0.6rem;
+    padding: 0.9rem 2.4rem;
     color: white;
     border-color: #799DAB;
 }
@@ -130,10 +132,19 @@ align-items: center; /* Center vertically within the container */
 }
 
 .social-media-icons-left i {
-    margin-left: 20px; 
+    margin-left: 1.25rem; 
 }
 
-.contact-left h2 {
+.contact-left h1 {
     color: black;
+}
+
+.contact-text-left {
+    display: flex;
+    align-items: center; /* Vertically center the contents */
+}
+
+.contact-text-left i {
+    margin-right: 10px; /* Add some space between the icon and text */
 }
 
