--- a/css/reviews.css
+++ b/css/reviews.css
@@ -14,6 +14,9 @@
     justify-content: center;
     align-items: center;
 }
+.carousel_row {
+    gap: 1rem;
+}
 .column{
     display: flex;
     flex-direction: column;
@@ -27,11 +30,26 @@
 /*  */
 /* carousel */
 /*  */
+
 .carousel_container {
     position: relative;
     overflow: hidden;
-    width: 80rem;
+    width: 40%;
 }
+
+@media only screen and (min-width: 640px) {
+    .carousel_container {
+        width: 35%;
+    }
+  }
+@media only screen and (min-width: 1280px) {
+    .carousel_container {
+        width: 40%;
+    }
+  }
+
+ 
+
 /* collection of slides */
 .carousel_slides {
     display: flex;
@@ -51,6 +69,30 @@
     background-color: var(--white);
     box-shadow: 0px 1.5px 9px rgba(0, 0, 0, 0.20);
 }
+
+@media only screen and (min-width: 640px) {
+    .carousel_slide {
+        flex: 0 0 94%; /* display 2 slides at a time if increased the 2nd slide wil not be visable*/
+    }
+  }
+@media only screen and (min-width: 1280px) {
+    .carousel_slide {
+        flex: 0 0 94%; /* display 2 slides at a time if increased the 2nd slide wil not be visable*/
+    }
+  }
+
+  @media only screen and (min-width: 1800px) {
+    .carousel_slide {
+        flex: 0 0 46%; /* display 2 slides at a time if increased the 2nd slide wil not be visable*/
+    }
+  }
+
+  @media only screen and (min-width: 2500px) {
+    .carousel_slide {
+        flex: 0 0 47%; /* display 2 slides at a time if increased the 2nd slide wil not be visable*/
+    }
+  }
+
 /* contents of the slide */
 .carousel_content {
     display: flex;
