styles_faq.css: Changed 'faw_leesmeer' to use the same size as the other FAQ components

--- a/css/styles_faq.css
+++ b/css/styles_faq.css
@@ -18,7 +18,7 @@
 
 .faq_leesmeer { /*Flexbox used for aligning the "Lees Meer" button*/
     display: flex;
-    width: 80%;
+    width: 60vw;
     justify-content: flex-end;
     font-size: large;
     margin-bottom: 1rem;
