--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
 @import url(footer.css);
 @import url(line.css);
 @import url(circle_dots.css);
+@import url(circle_workspace.css);
 
 @font-face {
     font-family: Calibre-Medium;
