--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
 @import url(footer.css);
 @import url(line.css);
 @import url(circle_dots.css);
+@import url(darkmodebutton.css);
 
 @font-face {
     font-family: Calibre-Medium;
@@ -45,6 +46,7 @@
     --dark-background: #1C1C1C;
     --text-color: #3C3C43;
     --white: #FFFFFF;
+    --black: #000;
     --logo-filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(1%) hue-rotate(123deg) brightness(105%) contrast(101%);
 }
 
